--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 											<a href="https://github.com/drboyle2/DBDSW-VulWitch" class="special">Check it Out</a>
 										</article>
 										<article>
-											<a href="https://github.com/lanakiim/CSE368-Resume-Grader" class="image"><img src="images/res.jpg" alt="" /></a>
-											<h3 class="major">AI Resume Grader</h3>
-											<p>A resume Parser and grader built with the help of OpenAI so you can grade your resume and get the best jobs!! Made for as a Project for UB CSE 368 Class</p>
-											<a href="https://github.com/lanakiim/CSE368-Resume-Grader" class="special">Check it Out</a>
+											<a href="https://github.com/lanakiim/CSE368-Resume-Grader" class="image"><img src="images/Basketball (ball) Pixel Art.jpeg" alt="" /></a>
+											<h3 class="major">NBA Stats and Prediction App</h3>
+											<p>A web app made with microservices architecture to provide real-time NBA statistics and game predictions.(work in progress)</p>
+											<a href="https://github.com/Sayaf1231/NBA-stats-App" class="special">Check it Out</a>
 										</article>
 										<article>
 											<a href="https://github.com/Sayaf1231/To-Do-List" class="image"><img src="images/todo.jpg" alt="" /></a>
